# LenseSim

./: .gitignore  CMakeLists.txt  README.md
src/: CollisionManager.cpp  CollisionManager.h  Lense.h  Line.cpp  Line.h  Mirror.h  Object.cpp  Object.h  Photon.h  PhysicsTrait.h  Timer.h  Vec2.h  main.cpp  utils.h
